IMPure/grammar.txt
program ::=   <command> | <command> <program>

command ::=   <variableDeclaration> ";"
          |   <assignment> ";"
          |   <ifThenElse> ";"
          |   <while> ";"
          |   <skip> ";"

variableDeclaration ::= "var" <identifier> "=" <aexp> ";"

assignment ::=    <identifier> "=" <aexp> ";"

ifThenElse ::=    "if" "("<bexp>")" "{" <program> "}"
            |     "if" "("<bexp>")" "{" <program>"}" "else" "{" <program> "}"

while ::=      "while" "("<bexp>")" "{" <program> "}"

skip ::=   "skip"

aexp ::=    <aterm> | <aterm> "+" <aexp> | <aterm> "-" <aexp>

aterm ::=   <afact> | <afact> "-" <aterm>

afact ::= <positiveterm> | <negativeterm> | "(" <aexp> ")"

negativeterm ::=    "-" <positiveterm>

positiveterm ::=    <naturalnumber> | <identifier>

bexp ::=        <bterm> | <bexp> "or" <bexp> | <comparison>

bterm ::=       <bfact> "and" <bexp>

bfact ::=       <truthvalue> | "not" <bexp> | "(" <bexp> ")"

comparison ::=  <aexp> <operator> <aexp>

truthvalue ::=    "True" | "False"

operator ::=    "<" | ">" | "==" | "<=" | ">=" | "!="

naturalnumber ::=   <digit> | <digit> <integer>

digit ::=     [0-9]*
identifier ::=    [a-zA-Z_][a-zA-Z_0-9]*
